@@ -13,6 +13,7 @@ MOSQ_OBJS=mosquitto.o \
 		  send_mosq.o \
 		  send_client_mosq.o \
 		  thread_mosq.o \
+		  time_mosq.o \
 		  util_mosq.o \
 		  will_mosq.o
 
@@ -77,6 +78,9 @@ send_client_mosq.o : send_client_mosq.c send_mosq.h
 	$(CC) $(LIB_CFLAGS) -c $< -o $@
 
 thread_mosq.o : thread_mosq.c
+	$(CC) $(LIB_CFLAGS) -c $< -o $@
+
+time_mosq.o : time_mosq.c
 	$(CC) $(LIB_CFLAGS) -c $< -o $@
 
 util_mosq.o : util_mosq.c util_mosq.h
